Customized message and fixed grammatical errors

--- a/app.properties
+++ b/app.properties
@@ -6,4 +6,4 @@ new-users = true
 [contributors]
 url = https://api.github.com/repos/{}/{}/contributors
 [comments]
-message = Hello, @{}! Thank you for your contribution :smile:
+message = Hello, @{}! Congratulations on your first pr. Thank you for the contribution :smile:
